--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,10 +1,11 @@
-<%- include('../includes/head.ejs')%>
+<%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <%- include('../includes/navigation.ejs')%>
+   <%- include('../includes/navigation.ejs') %>
+
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
@@ -20,10 +21,11 @@
                 <input type="number" name="price" id="price" step="0.01">
             </div>
             <div class="form-control">
-                <label for="discription">Discription</label>
-                <textarea name="discription" id="discription" rows="5"></textarea>
+                <label for="description">Description</label>
+                <textarea name="description" id="description" rows="5"></textarea>
             </div>
+
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
-<%- include('../includes/end.ejs')%>
+<%- include('../includes/end.ejs') %>
