--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -24,10 +24,11 @@
                     </ul>
                     <hr>
                     <div class="centered">
-                        <form action="/create-order" method="POST">
+                        <!-- <form action="/create-order" method="POST">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button class="btn" type="submit">Checkout</button>
-                        </form>
+                        </form> -->
+                        <a href="/checkout" class = "btn">Checkout</a>
                     </div>
                     <% } else { %>
                         <h1>No Products in Cart!</h1>
